--- a/app/src/main/res/layout/content_faculty_dashboard.xml
+++ b/app/src/main/res/layout/content_faculty_dashboard.xml
@@ -159,6 +159,7 @@
                 android:layout_marginRight="16dp"
                 app:cardElevation="20dp"
                 app:cardCornerRadius="8dp"
+                android:id="@+id/facnotes"
                 >
 
                 <LinearLayout
