--- a/app/src/main/res/layout/activity_placement.xml
+++ b/app/src/main/res/layout/activity_placement.xml
@@ -14,20 +14,31 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Placement Statistics"
-            android:textSize="20sp"
-            android:layout_gravity="center"/>
+            android:text="PLACEMENT STATISTICS"
+            android:layout_margin="20dp"
+            android:textSize="30sp"
+            android:textColor="#FF0D0D0D"
+            android:textAlignment="center"
+            android:textStyle="bold"
+            android:layout_gravity="center"
+            android:padding="10dp"/>
 
         <EditText
             android:id="@+id/aggtxt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Enter Aggregate"/>
+            android:hint="Enter Aggregate"
+            android:layout_margin="20dp"
+            android:textSize="25dp"/>
         <Button
             android:id="@+id/compbtn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Get Companies"/>
+            android:layout_margin="20dp"
+            android:text="Get Companies"
+            android:background="@drawable/button"
+            android:fontFamily="sans-serif-smallcaps"
+            android:textSize="20dp"/>
 
         <TextView
             android:id="@+id/tvcname"
