--- a/app/src/main/res/layout/activity_student_register.xml
+++ b/app/src/main/res/layout/activity_student_register.xml
@@ -18,7 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dp"
-        android:text="STUDENT REGISTERATION"
+        android:text="STUDENT REGISTRATION"
         android:textStyle="bold"
         android:textAlignment="center"
         android:textColor="#000"
