it is done already

--- a/app/src/main/res/layout/activity_placement.xml
+++ b/app/src/main/res/layout/activity_placement.xml
@@ -45,12 +45,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
-            android:textSize="20sp"
+            android:textSize="20dp"
             android:textColor="#02061b"
-            android:background="#6363f1"
             android:layout_gravity="center"
             android:textAlignment="center"
-            android:textStyle="normal"
+            android:textStyle="bold"
             android:hint="Company name will be displayed here" />
     </LinearLayout>
 
