--- a/app/src/main/res/layout/content_student_dashboard.xml
+++ b/app/src/main/res/layout/content_student_dashboard.xml
@@ -91,7 +91,7 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
                         android:fontFamily="sans-serif-smallcaps"
-                        android:text="Attendence"
+                        android:text="Attendance"
                         android:layout_marginTop="10dp"
                         android:textAlignment="center"
                         android:textColor="@android:color/black"
