--- a/app/src/main/res/layout/nav_header_faculty_dashboard.xml
+++ b/app/src/main/res/layout/nav_header_faculty_dashboard.xml
@@ -12,8 +12,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
-    <ImageView
-        android:id="@+id/imageView"
+    <ImageButton
+        android:id="@+id/imgbut"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
