--- a/app/src/main/res/layout/nav_header_faculty_dashboard.xml
+++ b/app/src/main/res/layout/nav_header_faculty_dashboard.xml
@@ -12,7 +12,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
-    <ImageButton
+    <ImageView
         android:id="@+id/imgbut"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
