--- a/app/src/main/res/layout/nav_header_student_dashboard.xml
+++ b/app/src/main/res/layout/nav_header_student_dashboard.xml
@@ -11,7 +11,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
-    <ImageButton
+    <ImageView
         android:id="@+id/imgbut"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
