--- a/app/src/main/res/layout/content_faculty_dashboard.xml
+++ b/app/src/main/res/layout/content_faculty_dashboard.xml
@@ -114,6 +114,7 @@
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 app:cardElevation="20dp"
+                android:id="@+id/markscard"
                 app:cardCornerRadius="8dp"
                 >
 
