--- a/app/src/main/res/layout/nav_header_faculty_dashboard.xml
+++ b/app/src/main/res/layout/nav_header_faculty_dashboard.xml
@@ -25,20 +25,22 @@
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="Name"
+        android:fontFamily="sans-serif-smallcaps"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
     <TextView
         android:id="@+id/facemail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="email"
+        android:text="E-mail"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
 
     <TextView
         android:id="@+id/facusn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="usn"
+        android:text="USN"
+        android:fontFamily="sans-serif-smallcaps"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"/>
 
 </LinearLayout>
