--- a/app/src/main/res/layout/activity_fac_notes.xml
+++ b/app/src/main/res/layout/activity_fac_notes.xml
@@ -43,10 +43,11 @@
             android:id="@+id/fnametv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="File name here"
+            android:text="Filename here"
             android:layout_gravity="center"
             android:layout_marginTop="20dp"
-            android:textAlignment="center"/>
+            android:textAlignment="center"
+            />
 
         <TextView
             android:layout_width="match_parent"
