--- a/app/src/main/res/menu/activity_faculty_dashboard_drawer.xml
+++ b/app/src/main/res/menu/activity_faculty_dashboard_drawer.xml
@@ -6,7 +6,7 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/about"
-            android:title="about" />
+            android:title="About" />
         <item
             android:id="@+id/push"
             android:title="Push Notification" />
