--- a/app/src/main/res/layout/content_student_dashboard.xml
+++ b/app/src/main/res/layout/content_student_dashboard.xml
@@ -152,6 +152,7 @@
             <android.support.v7.widget.CardView
                 android:layout_width="0dp"
                 android:layout_height="0dp"
+                android:id="@+id/notescard"
                 android:layout_columnWeight="1"
                 android:layout_rowWeight="1"
                 android:layout_marginBottom="16dp"
