--- a/app/src/main/res/layout/activity_stud_notes.xml
+++ b/app/src/main/res/layout/activity_stud_notes.xml
@@ -1,23 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:id="@+id/lview"
     tools:context="com.example.saipr.final_year_proj.StudNotesActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:id="@+id/lview">
+
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:text="Hello"
+            android:textSize="20sp"
+            android:layout_gravity="center"
+            android:textColor="#000"
             android:id="@+id/title"
             />
 
-    </LinearLayout>
-</ScrollView>
+        <ListView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:divider="@color/material_blue_grey_800"
+            android:dividerHeight="1dp"
+            android:listSelector="#BCD2"
+            android:id="@+id/lv"/>
+
+
+
+</LinearLayout>
