added aggregate page

--- a/app/src/main/res/menu/activity_student_dashboard_drawer.xml
+++ b/app/src/main/res/menu/activity_student_dashboard_drawer.xml
@@ -8,6 +8,9 @@
             android:id="@+id/about"
             android:title="About" />
         <item
+            android:id="@+id/agg"
+            android:title="Aggregate" />
+        <item
             android:id="@+id/logout"
             android:title="Logout" />
     </group>
